test/typecheck/errors/method-no-call.boa
o: output sum of int;

if (matches)
	o << 1;
